--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/stylesheet.less
@@ -15,3 +15,8 @@
 			.btn-default;}
 	}
 }
+
+.kontaktblok {
+		.kontaktblok-headline 	{ font-size: 24px;}	
+		.kontaktblok-text { font-size: 15px;}
+}
