--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/template/elements/entity-info.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/template/elements/entity-info.less
@@ -3,7 +3,7 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-entity-info
+// | - .os2sub-entity-info
 // |
 
 // --------------------------------------------------
@@ -15,7 +15,7 @@
 // --------------------------------------------------
 
 // Entity info
-.fki-entity-info {
+.os2sub-entity-info {
 	list-style: none;
 	margin: 0;
 	padding: 0;
@@ -38,25 +38,25 @@
 // Variants
 // --------------------------------------------------
 
-.fki-box,
-.fki-box-primary {
-	.fki-mixin-entity-info-variant(@brand-primary);
+.os2sub-box,
+.os2sub-box-primary {
+	.os2sub-mixin-entity-info-variant(@brand-primary);
 }
 
-.fki-box-secondary {
-	.fki-mixin-entity-info-variant(@brand-secondary);
+.os2sub-box-secondary {
+	.os2sub-mixin-entity-info-variant(@brand-secondary);
 }
 
-.fki-box-tertiary {
-	.fki-mixin-entity-info-variant(@brand-tertiary);
+.os2sub-box-tertiary {
+	.os2sub-mixin-entity-info-variant(@brand-tertiary);
 }
 
-.fki-box-quaternary {
-	.fki-mixin-entity-info-variant(@brand-quaternary);
+.os2sub-box-quaternary {
+	.os2sub-mixin-entity-info-variant(@brand-quaternary);
 }
 
-.fki-box-quinary {
-	.fki-mixin-entity-info-variant(@brand-quinary);
+.os2sub-box-quinary {
+	.os2sub-mixin-entity-info-variant(@brand-quinary);
 }
 
 // --------------------------------------------------
@@ -67,77 +67,77 @@
 @media @media-query-mobile {
 
 	// Entity info
-	.fki-entity-info {}
+	.os2sub-entity-info {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
 	// Entity info
-	.fki-entity-info {}
+	.os2sub-entity-info {}
 }
 
 // Tablet
 @media @media-query-tablet {
 
 	// Entity info
-	.fki-entity-info {}
+	.os2sub-entity-info {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
 	// Entity info
-	.fki-entity-info {}
+	.os2sub-entity-info {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
 	// Entity info
-	.fki-entity-info {}
+	.os2sub-entity-info {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
 	// Entity info
-	.fki-entity-info {}
+	.os2sub-entity-info {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
 	// Entity info
-	.fki-entity-info {}
+	.os2sub-entity-info {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
 	// Entity info
-	.fki-entity-info {}
+	.os2sub-entity-info {}
 }
 
 // Print
 @media print {
 
 	// Entity info
-	.fki-entity-info {}
+	.os2sub-entity-info {}
 }
 
 // Touch
 .touch {
 
 	// Entity info
-	.fki-entity-info {}
+	.os2sub-entity-info {}
 }
 
 // No touch
 .no-touch {
 
 	// Entity info
-	.fki-entity-info {}
+	.os2sub-entity-info {}
 }
 
 // --------------------------------------------------
@@ -145,12 +145,12 @@
 // --------------------------------------------------
 
 // Entity info mixin
-.fki-mixin-entity-info-variant(@font-color) {
+.os2sub-mixin-entity-info-variant(@font-color) {
 
 	&,
-	>	.fki-box {
+	>	.os2sub-box {
 
-		.fki-entity-info {
+		.os2sub-entity-info {
 
 			&,
 			a,
