--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/variables/bs3-designer.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/variables/bs3-designer.less
@@ -11,7 +11,7 @@
 // --------------------------------------------------
 
 // Brand
-@brand-secondary:	 #4ec6f8;
+@brand-secondary:	 #8b0053;
 @brand-tertiary:   #67c10e;
 @brand-quaternary: #ff911c;
 @brand-quinary: 	 #ea6060;
