Features og themes updated

--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/variables/bootstrap.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/variables/bootstrap.less
@@ -41,10 +41,10 @@
 //== Typography
 //
 //## Font, line-height, and color for body text, headings, and more.
-// Alegreya+Sans:400,300,400italic,100,700,500,900,800
+// family=Arvo:400,400italic,700
 
-@font-family-sans-serif:  'Alegreya Sans', Helvetica, Arial, sans-serif;
-@font-family-serif:       'Alegreya', Georgia, "Times New Roman", Times, serif;
+@font-family-sans-serif:  'Arvo', Helvetica, Arial, sans-serif;
+@font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
@@ -52,7 +52,6 @@
 @font-size-base:          14px;
 @font-size-large:         ceil((@font-size-base * 1.25)); // ~18px
 @font-size-small:         ceil((@font-size-base * 0.85)); // ~12px
-@font-size-small-weight:	300;
 
 @font-size-h1:            floor((@font-size-base * 2.6)); // ~36px
 @font-size-h2:            floor((@font-size-base * 2.15)); // ~30px
