--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/variables/bs3-sidebar.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/variables/bs3-sidebar.less
@@ -76,7 +76,7 @@
 // |--------------------------------------------------------------------------
 
 //== Base
-@bs3-sidebar-background-color:	@brand-primary;
+@bs3-sidebar-background-color:	#FFF;
 
 @bs3-sidebar-left-box-shadow: 	inset -15px 0 35px -15px rgba(0, 0, 0, .6);
 @bs3-sidebar-right-box-shadow: 	inset -15px 0 -15px -15px rgba(0, 0, 0, 1);
@@ -88,9 +88,9 @@
 @bs3-sidebar-logo-border-color:                                         #12385c;
 @bs3-sidebar-logo-border-color-rgba:                                    rgba(0, 0, 0, .12);
 
-@bs3-sidebar-logo-textual-font-color:                                   #fff;
+@bs3-sidebar-logo-textual-font-color:                                   #333;
 
-@bs3-sidebar-logo-slogan-font-color:                                    #fff;
+@bs3-sidebar-logo-slogan-font-color:                                    #000;
 
 //== Headline
 @bs3-sidebar-nav-headline-font-color:                                   #aaabae;
@@ -111,8 +111,8 @@
 @bs3-sidebar-nav-link-active-background-color:                          @bs3-sidebar-nav-link-hover-background-color;
 @bs3-sidebar-nav-link-active-background-color-rgba:                     @bs3-sidebar-nav-link-hover-background-color-rgba;
 
-@bs3-sidebar-nav-link-font-color:                                       #fff;
-@bs3-sidebar-nav-link-hover-font-color:                                 #fff;
+@bs3-sidebar-nav-link-font-color:                                       #333;
+@bs3-sidebar-nav-link-hover-font-color:                                 #ccc;
 @bs3-sidebar-nav-link-active-font-color:                                @brand-secondary;
 
 @bs3-sidebar-nav-link-border-color:                                     #12385c;
