--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/stylesheet.less
@@ -83,6 +83,7 @@
 	background-color: #fff;
 	padding: @padding-base-horizontal;
 	color: #ccc;
+	border-radius: 3px 3px 0 0;
 	.contact-information {
 		clear: both;
 		text-align: center;
@@ -208,8 +209,8 @@
 @bs3-simple-navigation-list-button-color: #333;
 @bs3-simple-navigation-list-button-icon-color: #000;
 
-@bs3-main-navigation-nav-link-font-weight: 400;
-@bs3-main-navigation-nav-link-font-size: 15px;
+@bs3-main-navigation-nav-link-font-weight: 700;
+@bs3-main-navigation-nav-link-font-size: 16px;
 @bs3-main-navigation-nav-link-hover-font-color: @state-secondary-bg;
 @bs3-main-navigation-nav-link-hover-background-color: transparent ;
 .front .pane-os2sub-banner  { margin-bottom: 30px; margin-top: 0;}
@@ -220,3 +221,4 @@
 .simple-navigation-logo-link { color: #333; text-align: left; font-size: @font-size-large;
 	&:hover { color: #dedede}
 }
+.main-navigation-list-link a { text-transform: uppercase; }
