--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/variables/bs3-main-navigation.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/variables/bs3-main-navigation.less
@@ -26,7 +26,7 @@
 @bs3-main-navigation-nav-link-top-bottom-padding:                0;
 @bs3-main-navigation-nav-link-left-right-padding:                @bs3-main-navigation-nav-element-spacing;
 @bs3-main-navigation-nav-link-text-decoration:                   none;
-@bs3-main-navigation-nav-link-font-color:                        @brand-primary;
+@bs3-main-navigation-nav-link-font-color:                        #191919;
 @bs3-main-navigation-nav-link-background-color:                  transparent;
 
 @bs3-main-navigation-nav-link-hover-text-decoration:             none;
