--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/variables/bootstrap.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/variables/bootstrap.less
@@ -41,12 +41,13 @@
 //== Typography
 //
 //## Font, line-height, and color for body text, headings, and more.
-// family=Arvo:400,400italic,700
+//  PT+Sans:400,400italic,700,700italic|PT+Sans+Caption:400,700|PT+Serif:400,400italic,700,700italic|PT+Mono,
 
-@font-family-sans-serif:  'Arvo', Helvetica, Arial, sans-serif;
-@font-family-serif:       Georgia, "Times New Roman", Times, serif;
+
+@font-family-sans-serif:  'PT Sans', sans-serif;
+@font-family-serif:       'PT Serif', Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
-@font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
+@font-family-monospace:   'PT Mono',Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
 
 @font-size-base:          14px;
@@ -66,8 +67,8 @@
 @line-height-computed:    floor((@font-size-base * @line-height-base)); // ~20px
 
 //** By default, this inherits from the `<body>`.
-@headings-font-family:    @font-family-sans-serif;
-@headings-font-weight:    500;
+@headings-font-family:    'PT Sans Caption', sans-serif;
+@headings-font-weight:    400;
 @headings-line-height:    1.1;
 @headings-color:          inherit;
 
@@ -370,10 +371,10 @@
 @navbar-default-border:            darken(@navbar-default-bg, 6.5%);
 
 // Navbar links
-@navbar-default-link-color:                #777;
-@navbar-default-link-hover-color:          #333;
+@navbar-default-link-color:                #191919;
+@navbar-default-link-hover-color:          #8B0053;
 @navbar-default-link-hover-bg:             transparent;
-@navbar-default-link-active-color:         #555;
+@navbar-default-link-active-color:         #8B0053;
 @navbar-default-link-active-bg:            darken(@navbar-default-bg, 6.5%);
 @navbar-default-link-disabled-color:       #ccc;
 @navbar-default-link-disabled-bg:          transparent;
