Updates iht tilbageløb

--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/stylesheet.less
@@ -211,8 +211,7 @@
 @bs3-simple-navigation-list-button-color: #333;
 @bs3-simple-navigation-list-button-icon-color: #000;
 
-@bs3-main-navigation-nav-link-font-weight: 700;
-@bs3-main-navigation-nav-link-font-size: 16px;
+
 @bs3-main-navigation-nav-link-hover-font-color: @state-secondary-bg;
 @bs3-main-navigation-nav-link-hover-background-color: transparent ;
 .front .pane-os2sub-banner  { margin-bottom: 30px; margin-top: 0;}
@@ -224,3 +223,5 @@
 	&:hover { color: #dedede}
 }
 .main-navigation-list-link a { text-transform: uppercase; }
+
+.page-node .view-os2sub-banner { margin-bottom: 20px;}
