--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/template/elements/box.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/template/elements/box.less
@@ -17,7 +17,7 @@
 @os2sub-box-heading-top-bottom-spacing: 10px;
 @os2sub-box-heading-left-right-spacing: @default-left-right-spacing;
 
-@os2sub-box-body-top-bottom-spacing: 5px;
+@os2sub-box-body-top-bottom-spacing: @default-left-right-spacing;
 @os2sub-box-body-left-right-spacing: @default-left-right-spacing;
 
 @os2sub-box-footer-top-bottom-spacing: 5px;
