--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/variables/bs3-designer.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/variables/bs3-designer.less
@@ -200,3 +200,5 @@
 @bs3-designer-headings-font-size-sm: 0.85;
 @bs3-designer-headings-font-size-md: 0.9;
 @bs3-designer-headings-font-size-lg: 1.0;
+
+.padding-top-large {padding-top: 30px;}
