Afstand mellem nyheder på Nyheder siden

--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/stylesheet.less
@@ -259,3 +259,8 @@
   &:last-child { margin-right: 20px;}
   }  
 }
+.view-mode-teaser  {
+  margin-bottom: 20px;
+  .node--os2web_base_news--teaser {}
+}
+
