Fotos top og bund margin

--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/stylesheet.less
@@ -264,3 +264,10 @@
   .node--os2web_base_news--teaser {}
 }
 
+.photoswipe-gallery {
+  a.photoswipe {
+    margin-bottom: 15px;
+    margin-top: 15px;
+  }
+}
+
