Baggrund til mobilvisning

--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/template/page-layout/wrapper.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/template/page-layout/wrapper.less
@@ -20,7 +20,9 @@
 .outer-wrapper {}
 
 // Inner wrapper
-.inner-wrapper {}
+.inner-wrapper {
+  background-color: @body-bg;
+}
 
 // Content
 .content {
