Added grunt build changes

--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/template/elements/nav-tabs.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/template/elements/nav-tabs.less
@@ -17,7 +17,7 @@
 // Content tabs container
 .content-tabs-container {
   .text-center;
-
+  clear: both;
   // Nav tabs
   .nav-tabs {
     display: inline-block;
