--- a/public_html/profiles/os2sub/themes/subsite_1/mail.css
+++ b/public_html/profiles/os2sub/themes/subsite_1/mail.css
@@ -1,2 +1,2 @@
-body {background-color: #cdcdcd }
-#main { margin: 20px; background-color: #FFF; padding: 20px; }
+body {background-color: #eee; padding: 10px }
+#main { background-color: #FFF; padding: 20px; margin: 0 auto; max-width: 560px; min-width: 280px; }
