--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/variables/bootstrap.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/variables/bootstrap.less
@@ -44,10 +44,10 @@
 //  family=Open+Sans:400,700,400italic,700italic|PT+Mono,
 
 
-@font-family-sans-serif:  'Open Sans', sans-serif;
+@font-family-sans-serif:  Arial,'Source Sans Pro', sans-serif;
 @font-family-serif:       @font-family-sans-serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
-@font-family-monospace:   'PT Mono',Menlo, Monaco, Consolas, "Courier New", monospace;
+@font-family-monospace:   'PT Mono', Menlo, Monaco, Consolas, 'Courier New', monospace;
 @font-family-base:        @font-family-sans-serif;
 
 @font-size-base:          14px;
