--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/variables/bs3-main-navigation.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/variables/bs3-main-navigation.less
@@ -3,10 +3,10 @@
 // |--------------------------------------------------------------------------
 
 // Base
-@bs3-main-navigation-height:                56px;
-@bs3-main-navigation-background-color:     	@content-bg;
+@bs3-main-navigation-height:                100px;
+@bs3-main-navigation-background-color:     	@brand-primary-light;
 @bs3-main-navigation-background-color-rgba: rgba(red(@bs3-main-navigation-background-color), green(@bs3-main-navigation-background-color), blue(@bs3-main-navigation-background-color), 1);
-@bs3-main-navigation-border-radius:         @border-radius-base;
+@bs3-main-navigation-border-radius:         0;
 @bs3-main-navigation-margin-bottom:         @grid-gutter-width;
 
 // Sticky
@@ -27,7 +27,7 @@
 @bs3-main-navigation-nav-link-left-right-padding:                @bs3-main-navigation-nav-element-spacing;
 @bs3-main-navigation-nav-link-text-decoration:                   none;
 @bs3-main-navigation-nav-link-font-color:                        #191919;
-@bs3-main-navigation-nav-link-background-color:                  transparent;
+@bs3-main-navigation-nav-link-background-color:                  #FFF;
 
 @bs3-main-navigation-nav-link-hover-text-decoration:             none;
 @bs3-main-navigation-nav-link-hover-font-color:                  @state-secondary-text;
@@ -100,4 +100,4 @@
 @bs3-main-navigation-nav-button-font-family:  @bs3-main-navigation-nav-link-font-family;
 @bs3-main-navigation-nav-button-font-size:    @bs3-main-navigation-nav-link-font-size;
 @bs3-main-navigation-nav-button-font-weight:  @bs3-main-navigation-nav-link-font-weight;
-@bs3-main-navigation-nav-button-padding:      0 @bs3-main-navigation-nav-element-spacing;
+@bs3-main-navigation-nav-button-padding:      10px @bs3-main-navigation-nav-element-spacing;
