--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/variables/bootstrap.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/variables/bootstrap.less
@@ -14,11 +14,12 @@
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-@brand-primary:         #777777; // #337ab7
-@brand-success:         #5cb85c;
-@brand-info:            #5bc0de;
-@brand-warning:         #f0ad4e;
-@brand-danger:          #d9534f;
+@brand-primary:         #6B2D52; // Var tidligere: #911653 / Lys: @brand-primary-light
+@brand-primary-light:   #D599A9;
+@brand-success:         #A2AC16;
+@brand-info:            #81C3E7;
+@brand-warning:         #F3EC69;
+@brand-danger:          #B94C2F;
 
 
 //== Scaffolding
@@ -326,7 +327,7 @@
 //** Number of columns in the grid.
 @grid-columns:              12;
 //** Padding between columns. Gets divided in half for the left and right.
-@grid-gutter-width:         30px;
+@grid-gutter-width:         20px;
 // Navbar collapse
 //** Point at which the navbar becomes uncollapsed.
 @grid-float-breakpoint:     @screen-sm-min;
